* Wed Dec 07 2016 Liz Nemsick <lnemsick.simp@gmail.com> - 4.0.0-0
- Use simp_options module for global catalysts
- Fix bug in xinetd.service.erb that caused an inadvertant newline between the
  IP address and port in a redirect configuration line in the generated file.
- Fix bug in xinetd.service.erb in which the instances and mdns configuration
  lines were omitted from the generated file.
- Fixed bug in validation of syslog facility
- Fixed bugs in validation of ::xinetd $passenv and $disable parameters
- Fixed bugs in validation of ::xinetd::service $x_id and $rpc_version parameters
- Minor cleanup

* Thu Dec 01 2016 Trevor Vaughan <tvaughan@onyxpoint.com> - 3.0.1-0
- Removed unnecessary dependency and call to pupmod-simp-rsync

* Tue Nov 22 2016 Liz Nemsick <lnemsick.simp@gmail.com> - 3.0.0-0
- Update version to reflect SIMP6 dependencies
- Minor cleanup

* Mon Nov 21 2016 Chris Tessmer <chris.tessmer@onyxpoint.com> - 2.1.2-0
- Minor cleanup

* Wed Nov 16 2016 Liz Nemsick <lnemsick.simp@gmail.com> - 2.1.2-0
- Updated iptables dependency version

* Tue Mar 01 2016 Ralph Wright <ralph.wright@onyxpoint.com> - 2.1.0-5
- Added compliance function support

* Tue Nov 10 2015 Chris Tessmer <chris.tessmer@onypoint.com> - 2.1.0-4
- migration to simplib and simpcat (lib/ only)

* Mon Apr 06 2015 Trevor Vaughan <tvaughan@onyxpoint.com> - 2.1.0-3
- Updated the default log_type to 'SYSLOG authpriv'

* Fri Jan 16 2015 Trevor Vaughan <tvaughan@onyxpoint.com> - 2.1.0-2
- Changed puppet-server requirement to puppet

* Sun Jun 22 2014 Kendall Moore <kmoore@keywcorp.com> - 2.1.0-1
- Removed MD5 file checksums for FIPS compliance.

* Thu Jun 19 2014 Trevor Vaughan <tvaughan@onyxpoint.com> - 2.1.0-1
- Ensure that 'lfrom' in xinetd.conf.erb is not converted to an Array
  explicitly.

* Fri Jan 3 2014 Nick Markowski <nmarkowski@keywcorp.com> - 2.1.0-0
- Updated module for puppet3/hiera compatibility, and optimized code for lint tests,
  and puppet-rspec.
