@@ -23,13 +23,13 @@ define xinetd::service (
   Array[Xinetd::SuccessLogOption]   $log_on_success = ['HOST','PID','DURATION','TRAFFIC'],
   Array[Xinetd::FailureLogOption]   $log_on_failure = ['HOST'],
   Optional[String]                  $x_id           = undef,
-  Optional[Xinetd::XType]           $x_type         = undef,
+  Optional[Xinetd::Type]            $x_type         = undef,
   Optional[Array[Xinetd::Flags]]    $flags          = undef,
   Optional[String]                  $group          = undef,
   Optional[Xinetd::UnlimitedInt]    $instances      = undef,
   Optional[Integer]                 $nice           = undef,
   Optional[String]                  $server_args    = undef,
-  Array                             $trusted_nets   = simplib::lookup('::simp_options::trusted_nets', { 'default_value' => ['127.0.0.1', '::1'], 'value_type' => Array[String] }),
+  Array                             $trusted_nets   = simplib::lookup('::simp_options::trusted_nets', { 'default_value' => ['127.0.0.1', '::1'] }),
   Optional[Xinetd::AccessTimes]     $access_times   = undef,
   Optional[Xinetd::RpcVersion]      $rpc_version    = undef,
   Optional[Integer]                 $rpc_number     = undef,
@@ -38,26 +38,27 @@ define xinetd::service (
   Optional[String]                  $redirect_ip    = undef,
   Optional[Integer]                 $redirect_port  = undef,
   Optional[String]                  $x_bind         = undef,
-  Optional[String]                  $banner         = undef,
-  Optional[String]                  $banner_success = undef,
-  Optional[String]                  $banner_fail    = undef,
+  Optional[Stdlib::Absolutepath]    $banner         = undef,
+  Optional[Stdlib::Absolutepath]    $banner_success = undef,
+  Optional[Stdlib::Absolutepath]    $banner_fail    = undef,
   Optional[Xinetd::UnlimitedInt]    $per_source     = undef,
   Optional[Tuple[Integer,Integer]]  $cps            = undef,
   Optional[Float]                   $max_load       = undef,
   Optional[Enum['yes','no']]        $groups         = undef,
   Optional[Enum['yes','no']]        $mdns           = undef,
-  Optional[String]                  $enabled        = undef,
-  Optional[String]                  $include        = undef,
-  Optional[String]                  $includedir     = undef,
+  Optional[Array[String]]           $enabled        = undef,
+  Optional[Stdlib::Absolutepath]    $include        = undef,
+  Optional[Stdlib::Absolutepath]    $includedir     = undef,
   Optional[Xinetd::UnlimitedInt]    $rlimit_as      = undef,
   Optional[Xinetd::UnlimitedInt]    $rlimit_cpu     = undef,
   Optional[Xinetd::UnlimitedInt]    $rlimit_data    = undef,
   Optional[Xinetd::UnlimitedInt]    $rlimit_rss     = undef,
   Optional[Xinetd::UnlimitedInt]    $rlimit_stack   = undef,
   Optional[Xinetd::DenyTime]        $deny_time      = undef,
-  Boolean                           $firewall       = simplib::lookup('::simp_options::firewall', { 'default_value'     => false, 'value_type' => Boolean }),
-  Boolean                           $tcpwrappers    = simplib::lookup('::simp_options::tcpwrappers', { 'default_value'  => false, 'value_type' => Boolean })
+  Boolean                           $firewall       = simplib::lookup('::simp_options::firewall', { 'default_value' => false }),
+  Boolean                           $tcpwrappers    = simplib::lookup('::simp_options::tcpwrappers', { 'default_value' => false })
 ) {
+  validate_port($port)
   validate_umask($x_umask)
   validate_log_type($log_type)
   if ($redirect_ip and $redirect_port) { validate_net_list("${redirect_ip}:${redirect_port}") }
