@@ -1,0 +1,1 @@
+type Xinetd::Type = Enum['RPC','INTERNAL','TCPMUX', 'TCPMUXPLUS','UNLISTED']
