@@ -1,1 +1,0 @@
-type Xinetd::XType = Enum['RPC','INTERNAL','TCPMUX', 'TCPMUXPLUS','UNLISTED']
